k8s/todo-fallback-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-fallback
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-fallback
  template:
    metadata:
      labels:
        app: todo-fallback
    spec:
      containers:
        - name: todo-fallback
          image: eagrudskova/todo-fallback:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: todo-fallback
spec:
  selector:
    app: todo-fallback
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
