k8s/todo-main-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-main
spec:
  replicas: 3
  selector:
    matchLabels:
      app: todo-main
  template:
    metadata:
      labels:
        app: todo-main
    spec:
      containers:
        - name: todo-main
          image: eagrudskova/todo-main:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5

---

apiVersion: v1
kind: Service
metadata:
  name: todo-main
spec:
  selector:
    app: todo-main
  ports:
    - port: 80
      targetPort: 8080
  type: LoadBalancer
